--- a/forms.html
+++ b/forms.html
@@ -27,13 +27,13 @@
     <form action="page2.html">
         <div>
             <label for="name"><b style="font-size: 22px;">Name:</b></label>
-            <input type="text" id="name" name="name">
+            <input type="text" id="name" name="name" required>
         </div>
         <br>
         
         <div>
             <label for="email"><b style="font-size: 22px;">Email:</b></label>
-            <input type="text" id="email" name="email">
+            <input type="text" id="email" name="email" required>
         </div>
         <br>
         <br>
